<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_creation"
    tools:context=".ui.pixel_coloring.PixelGalleryActivity">
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <include android:id="@+id/actionBar" layout="@layout/layout_actionbar" />
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/categoryScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintVertical_bias="0.23"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/categoryContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="8dp">
            <Button android:id="@+id/btnAll" style="@style/PixelCategoryButton" android:text="@string/pixel_all" />
            <Button android:id="@+id/btnAnimal" style="@style/PixelCategoryButton" android:text="@string/pixel_animals" />
            <Button android:id="@+id/btnFood" style="@style/PixelCategoryButton" android:text="@string/pixel_food" />
            <Button android:id="@+id/btnHuman" style="@style/PixelCategoryButton" android:text="@string/pixel_people" />
            <Button android:id="@+id/btnMonster" style="@style/PixelCategoryButton" android:text="@string/pixel_monsters" />
            <Button android:id="@+id/btnPlant" style="@style/PixelCategoryButton" android:text="@string/pixel_plants" />
            <Button android:id="@+id/btnVehicle" style="@style/PixelCategoryButton" android:text="@string/pixel_vehicles" />
            <Button android:id="@+id/btnChristmas" style="@style/PixelCategoryButton" android:text="@string/pixel_christmas" />
            <Button android:id="@+id/btnHalloween" style="@style/PixelCategoryButton" android:text="@string/pixel_halloween" />
            <Button android:id="@+id/btnRandom" style="@style/PixelCategoryButton" android:text="@string/pixel_random" />
        </LinearLayout>
    </HorizontalScrollView>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/pixel_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryScroll" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/levelList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="8dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryScroll"
        app:spanCount="2"
        tools:listitem="@layout/item_choose_pixel"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
