<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@color/red_BA"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="280:366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_rate">


            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/rate_us1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:fontFamily="@font/game_paused_demo_regular"
                android:textSize="20sp"
                android:textColor="@color/app"
                app:layout_constraintDimensionRatio="280:64"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvAvtRate"
                android:layout_width="76dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_rate_zero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                 />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/game_paused_demo_regular"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/zero_star_title"
                android:textColor="@color/app"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvAvtRate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/game_paused_demo_regular"
                android:freezesText="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/zero_star"
                android:textColor="#994A1E1D"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:srb_clearRatingEnabled="false"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_rate_not"
                app:srb_drawableFilled="@drawable/ic_rate"
                app:srb_isIndicator="false"
                app:srb_minimumStars="0"
                app:srb_numStars="0"
                app:srb_rating="0"
                app:srb_scrollable="true"
                app:srb_starHeight="30dp"
                app:srb_starPadding="6dp"
                app:srb_starWidth="30dp"
                app:srb_stepSize="1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36.5dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">

                <FrameLayout
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="200:36"
                    android:background="@drawable/bg_btn_rate"
                >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/game_paused_demo_regular"
                        android:gravity="center"
                        android:text="@string/rate"
                        android:textAllCaps="false"
                        android:textColor="@color/app"
                        android:textSize="16sp" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/game_paused_demo_regular"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toBottomOf="@id/btnVote"
                    android:textColor="@color/app"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
